kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: techcon-yuta
spec:
  selector:
    app: techcon-yuta
  ports:
    - port: 80
      targetPort: 8080
